--- a/src/carleon/service-modules/Makefile
+++ b/src/carleon/service-modules/Makefile
@@ -24,7 +24,7 @@
 PREFIX=/usr/local
 MODULES_TARGET=$(PREFIX)/lib/angharad/carleon
 CC=gcc
-CFLAGS=-c -fPIC -Wall -Werror -Wextra -Wconversion -D_REENTRANT -I$(PREFIX)/include $(ADDITIONALFLAGS)
+CFLAGS=-c -fPIC -Wall -Werror -Wextra -Wconversion -Wpedantic -D_REENTRANT -I$(PREFIX)/include $(ADDITIONALFLAGS)
 LIBS=-L$(PREFIX)/lib -lc -ljansson -lyder -lorcania -lulfius
 VERSION=0.1.0
 
